k8s/go-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-consumer
  template:
    metadata:
      labels:
        app: go-consumer
    spec:
      containers:
      - name: go-consumer
        image: us-central1-docker.pkg.dev/deep-clock-500019-v8/quiniela-repo/go-consumer:latest
        imagePullPolicy: Always
