k8s/grafana-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    name: grafana-web
  - port: 2222
    targetPort: 22
    name: ssh-access
  selector:
    app: grafana-vm
