k8s/rust-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
      - name: api-rust
        image: 34.136.113.161:8080/api-rust:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m" # Requerido para que el HPA pueda calcular el %
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust
spec:
  selector:
    app: api-rust
  ports:
  - port: 8080
    targetPort: 8080
