k8s/valkey-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: valkey-vm
